[gd_scene load_steps=35 format=3 uid="uid://ct3wtwybweip8"]

[ext_resource type="Script" uid="uid://c30061h6u40mp" path="res://enime.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://bxik200y007t1" path="res://enime/Dead_anin.png" id="2_qi2p4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_78pok"]
atlas = ExtResource("2_qi2p4")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvfll"]
atlas = ExtResource("2_qi2p4")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcnlr"]
atlas = ExtResource("2_qi2p4")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kfcu"]
atlas = ExtResource("2_qi2p4")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i558w"]
atlas = ExtResource("2_qi2p4")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuxq2"]
atlas = ExtResource("2_qi2p4")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvr33"]
atlas = ExtResource("2_qi2p4")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgm4o"]
atlas = ExtResource("2_qi2p4")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r3eb"]
atlas = ExtResource("2_qi2p4")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pufk"]
atlas = ExtResource("2_qi2p4")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_btc8u"]
atlas = ExtResource("2_qi2p4")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikghu"]
atlas = ExtResource("2_qi2p4")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6smf"]
atlas = ExtResource("2_qi2p4")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4rhq"]
atlas = ExtResource("2_qi2p4")
region = Rect2(400, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldfcd"]
atlas = ExtResource("2_qi2p4")
region = Rect2(480, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lt0"]
atlas = ExtResource("2_qi2p4")
region = Rect2(560, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8cg7"]
atlas = ExtResource("2_qi2p4")
region = Rect2(640, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ykh"]
atlas = ExtResource("2_qi2p4")
region = Rect2(720, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ygx"]
atlas = ExtResource("2_qi2p4")
region = Rect2(800, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlxjt"]
atlas = ExtResource("2_qi2p4")
region = Rect2(880, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aocai"]
atlas = ExtResource("2_qi2p4")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwl8u"]
atlas = ExtResource("2_qi2p4")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbcdb"]
atlas = ExtResource("2_qi2p4")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s77qv"]
atlas = ExtResource("2_qi2p4")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hnhx"]
atlas = ExtResource("2_qi2p4")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pas5"]
atlas = ExtResource("2_qi2p4")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1jey"]
atlas = ExtResource("2_qi2p4")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_51w4t"]
atlas = ExtResource("2_qi2p4")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddgyg"]
atlas = ExtResource("2_qi2p4")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbcdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78pok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvfll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcnlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kfcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i558w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuxq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvr33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgm4o")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r3eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pufk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btc8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikghu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6smf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4rhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldfcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8cg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ykh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ygx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlxjt")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aocai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwl8u")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbcdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s77qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hnhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pas5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1jey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51w4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddgyg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s77qv"]
size = Vector2(47, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78pok"]
size = Vector2(61.3785, 45.9718)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.472478, 0.522059)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_4gyqm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xbcdb")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.16464e-06, 6.31303e-07)
shape = SubResource("RectangleShape2D_s77qv")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-2.99215e-05, -1.91549)
shape = SubResource("RectangleShape2D_78pok")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
